--- a/VisibleConfusion/MVVM/View/PictureView.xaml
+++ b/VisibleConfusion/MVVM/View/PictureView.xaml
@@ -94,8 +94,8 @@
               HorizontalAlignment="Center">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
-                <RowDefinition Height="0.6*" />
-                <RowDefinition Height="0.4*" />
+                <RowDefinition />
+                <RowDefinition Height="Auto" MaxHeight="160"/>
             </Grid.RowDefinitions>
             <Grid Grid.Row="0"
                   HorizontalAlignment="Center">
